--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BLKOUTNXT - Supporting Black Queer Men Through Community</title>
-    <meta name="description" content="BLKOUTNXT is a community-focused initiative supporting Black queer men through multiple interconnected projects." />
-    <meta name="author" content="BLKOUTNXT" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>BLKOUT Dashboard</title>
   </head>
-
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
